# django-search-admin-autocomplete

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements_dev.txt
example/project/: urls.py
example/sample/: admin.py  models.py
example/sample/migrations/: 0002_category_client_alter_dummymodel_id_and_more.py
search_admin_autocomplete/: admin.py  tests.py
search_admin_autocomplete/static/easy_autocomplete/: main.js
search_admin_autocomplete/templates/search_admin_autocomplete/: change_list.html
