[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-listview-search-admin-autocomplete"
version = "1.1.0"
description = "Django admin list view search autocomplete with related field support"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "linevich", email = "mail@linevich.net" },
]
maintainers = [
    { name = "borhanst" },
]
keywords = ["django", "admin", "autocomplete", "search", "listview", "related-fields"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2",
]

[project.urls]
Homepage = "https://github.com/borhanst/django-listview-search-admin-autocomplete"
Repository = "https://github.com/borhanst/django-listview-search-admin-autocomplete"
Documentation = "https://github.com/borhanst/django-listview-search-admin-autocomplete#readme"
Issues = "https://github.com/borhanst/django-listview-search-admin-autocomplete/issues"
Changelog = "https://github.com/borhanst/django-listview-search-admin-autocomplete/releases"

[tool.hatch.build.targets.wheel]
packages = ["search_admin_autocomplete"]

[tool.hatch.build.targets.sdist]
include = [
    "/search_admin_autocomplete",
    "/README.rst",
    "/LICENSE",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example.project.settings"
pythonpath = ["."]
testpaths = ["search_admin_autocomplete"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
